@@ -1,6 +1,14 @@
+2009-02-14  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * src/common.h src/samplerate.c
+    Add new error value SRC_ERR_SINC_PREPARE_DATA_BAD_LEN.
+
+    * src/common.h
+    Add WARN_UNUSED macro.
+
 2009-02-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
-    *  src/common.h src/samplerate.c
+    * src/common.h src/samplerate.c
     Fix SRC_ERR_BAD_SRC_RATIO error string. Thanks David Cournapeau.
 
 2009-01-30  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
